# ssba2016-scale-estimation

./: README.md
src/: CMakeLists.txt  common.cmake  common.h  ematrix_hartley_gpl.cpp  ematrix_hartley_gpl.h  essential_matrix_solver.cpp  essential_matrix_solver.h  geometry_tools.cpp  geometry_tools.h  main.cpp  make_error_probability_histogram.m  pinhole_camera.cpp  pinhole_camera.h  plot_results.m  pose.cpp  pose.h  readme.txt  rotation_helpers.cpp  rotation_helpers.h  utilities.cpp  utilities.h
ssba2016/: PerssonMikael.tex  README  SSBAtran.cls  abstract.tex  experiments.tex  introduction.tex  method.tex  related_work.tex  ssba.bib  theory.tex
ssba2016/images/: camera.pdf_tex  camera_motion.pdf_tex
